Implement the Income by Ed level

--- a/InfoVis/index1.html
+++ b/InfoVis/index1.html
@@ -10,9 +10,10 @@
        <script src="content/js/jquery-3.2.1.slim.min.js"></script>
       
       <!-- CSS -->
-      <link rel="stylesheet" href="content/css/custom2.css">
+      <link rel="stylesheet" href="content/css/custom.css">
    </head>
-   <body>
+   <body><span style=" color:#AAA ;position: absolute;left: 40px;top: 45px;z-index: 4;">Select year: 
+      <select class="yearsOption" id="year"  min="2010" max="2018"></select></span>
          <svg id="svgStackedBars" class="svgArea" width="60%" height="65%"></svg>
          <svg id="svgMap" class="svgArea" width="40%" height="50%"></svg>
          <svg id="svgLines" class="svgArea" width="60%" height="35%"></svg>
