--- a/CheckpointIV_Prototype/index.html
+++ b/CheckpointIV_Prototype/index.html
@@ -10,18 +10,18 @@
          <div class="main_container">
             <div class="left_container"> 
                    <div class="income_edu_level">
-                        <div id="edu_income_1"> edu_income_level_1</div>
-                        <div id="edu_income_2"> edu_income_level_2</div>
+                        <div id="edu_income_1"> Average Income By Education Level 1 </div>
+                        <div id="edu_income_2"> Average Income By Education Level 2 </div>
 
                    </div>
                    <div class="left_bottom_container"> 
-                        <div id="early_leaver"> early leaver </div>
-                        <div id="adult_party"> adult_party</div>
+                        <div id="early_leaver"> Early Leavers in Education </div>
+                        <div id="adult_party"> Adult Participation in Learning </div>
                     </div>
             </div>
             <div class="right_container">
-                <div id="country_reading"> country reading</div>
-                <div id="books_spenditure"> book_spenditure</div>
+                <div id="country_reading"> Average Time Spent Reading </div>
+                <div id="books_spenditure"> Percentage of Household Expenditure in Reading Material </div>
             </div>
          </div>
      </body>
