Add inicial implementation of heatmap

--- a/InfoVis/index.html
+++ b/InfoVis/index.html
@@ -18,15 +18,18 @@
          <svg id="svgMap" class="svgArea" width="40%" height="50%"></svg>
          <svg id="svgLines" class="svgArea" width="60%" height="35%"></svg>
          <svg id="svgHeatmap" class="svgArea" width="40%" height="50%"></svg>
-        <div id="popover" class="popover">
+        <!-- <div id="popover" class="popover">
             <div class="name"><strong id="name"></strong></div>
             <div><span id="approach"></span></div>
-        </div>
+        </div> -->
  <!--   <script type="text/javascript" src="components/overview.js"></script>
     <script type="text/javascript" src="components/bars.js"></script> -->
-    
+    <script type="text/javascript" src="content/js/d3-tip.js"></script>     
     <script type="text/javascript" src="components/stackedBarPlot.js"></script> 
     <script type="text/javascript" src="components/heatmap.js"></script> 
+    <script type="text/javascript" src="components/lineCharts.js"></script> 
+
+
 
 	</body>
 </html>
