--- a/InfoVis/index.html
+++ b/InfoVis/index.html
@@ -12,10 +12,12 @@
       <!-- CSS -->
       <link rel="stylesheet" href="content/css/custom.css">
    </head>
-   <body><span style=" color:#AAA ;position: absolute;left: 440px;top: 45px;z-index: 4;">Select year: 
+   <body><span style=" color:#AAA ;position: absolute;left: 520px;top: 30px;z-index: 4;">Select year: 
       <select class="yearsOption" id="year"  min="2010" max="2018"></select></span>
          <svg id="svgStackedBars" class="svgArea" width="60%" height="65%"></svg>
          <svg id="svgMap" class="svgArea" width="40%" height="50%"></svg>
+         <!-- <span style=" color:#AAA ;position: absolute;left: 500px;top: 420px;z-index: 4;">Select Country: 
+            <select class="yearsOption" id="countries"></select></span> -->
          <svg id="svgLines" class="svgArea" width="60%" height="35%"></svg>
          <svg id="svgHeatmap" class="svgArea" width="40%" height="50%"></svg>
         <!-- <div id="popover" class="popover">
