--- a/CheckpointV/Prototype/index.html
+++ b/CheckpointV/Prototype/index.html
@@ -16,8 +16,8 @@
       <select class="yearsOption" id="year"  min="2010" max="2018"></select></span>
          <svg id="svgStackedBars" class="svgArea" width="60%" height="65%"></svg>
          <svg id="svgMap" class="svgArea" width="40%" height="60%"></svg>
-         <!-- <span style=" color:#AAA ;position: absolute;left: 500px;top: 420px;z-index: 4;">Select Country: 
-            <select class="yearsOption" id="countries"></select></span> -->
+         <span style=" color:#AAA ;position: absolute;left: 500px;top: 420px;z-index: 4;">Select Country: 
+            <select class="yearsOption" id="countries"></select></span>
          <svg id="svgLines" class="svgArea" width="60%" height="35%"></svg>
          <svg id="svgHeatmap" class="svgArea" width="40%" height="40%"></svg>
         <!-- <div id="popover" class="popover">
@@ -29,7 +29,7 @@
     <script type="text/javascript" src="content/js/d3-tip.js"></script>     
     <script type="text/javascript" src="components/stackedBarPlot.js"></script>  
     <script type="text/javascript" src="components/heatmap.js"></script> 
-    <script type="text/javascript" src="components/lineCharts.js"></script> 
+    <script type="text/javascript" src="components/lineCharts1.js"></script> 
     <script type="text/javascript" src="components/mapChart.js"></script> 
 
 
